
4.1.6
 + Fix: notepad like mode scrolling only creates selection when holding mouse L-buttoon
 + Fix: on windows the window has the 4coder icon

4.1.5
 + MAJOR: Scratch_Blocks now take arena pointer parameters in their constructor to specify arenas that should be treated as having distinct lifetimes, without doing this it is possible that a local scratch and another arena will actually refer to the same allocator and freeing the local scratch will also free memory that was meant to be in a separate arena.
 + MAJOR: HookID_BufferEditRange now takes the "old_cursor_range" instead of the "original_size"
 + Date_Time system APIs, and Date_Time string formatting
 + 'clean_all_lines' removes trailing whitespace and removes blank lines
 + 'clean_trailing_whitespace' leaves blank lines
 + In config.4coder "enable_output_wrapping" determine whether to wrap buffers like *compilation*, *search*, etc.
 + In config.4coder "default_tab_width" determines the width of a tab character in number of spaces
 + In config.4coder "cursor_roundness" "lister_roundness" "mark_thickness"
 + The lister text field keeps the right hand side in view when the string gets too long to fit
 + Hook called whenever a view's buffer is changed
 + 'quick_swap_buffer` command bound to [ Backslash Alt ] and on mac [ Backslash Command ]
 + Record_Info now reports a pos_before_edit member - which is not gauranteed to be accurate but is when it can be,
   and when it can't be is based at the first character of the edit range
 + When undoing a string it briefly fades away; controlled by config.4coder "enable_undo_fade_out"
 + Fix: when generated/metadata* files are missing buildsuper still succeeds
 + Fix: mac does not hang opening multiple files
 + Fix: line number margin performance
 + Fix: no crash in notepad like mode when replacing a highlighted range in a parsed file
 + Fix: no thread handle leak when closing a view
 + Fix: no crash when a project file .cmd is not the right type